--- a/MegaboxClone/Base.lproj/Main.storyboard
+++ b/MegaboxClone/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                                 <rect key="frame" x="0.0" y="107.5" width="414" height="705.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-Av-Hv3">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1896.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1949"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fNp-z7-TzV" userLabel="이벤트 컬렉션뷰">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="153.5"/>
@@ -371,7 +371,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Zc-i7-rXF" userLabel="이벤트 리스트 컬렉션뷰">
-                                                <rect key="frame" x="0.0" y="1492" width="414" height="404.5"/>
+                                                <rect key="frame" x="0.0" y="1492" width="414" height="457"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hve-CI-UCT">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="46"/>
@@ -397,28 +397,28 @@
                                                         </cells>
                                                     </collectionView>
                                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dwe-L1-eKr" userLabel="메가픽 컨테이너뷰">
-                                                        <rect key="frame" x="0.0" y="46" width="414" height="289.5"/>
+                                                        <rect key="frame" x="0.0" y="46" width="414" height="370"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" secondItem="Dwe-L1-eKr" secondAttribute="height" multiplier="10:7" id="GRq-gT-LaI"/>
+                                                            <constraint firstAttribute="height" constant="370" id="OpK-hr-6bT"/>
                                                         </constraints>
                                                         <connections>
                                                             <segue destination="Pe9-dP-ww1" kind="embed" id="rWl-OR-NlA"/>
                                                         </connections>
                                                     </containerView>
                                                     <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bXw-iu-AeH">
-                                                        <rect key="frame" x="0.0" y="46" width="414" height="289.5"/>
+                                                        <rect key="frame" x="0.0" y="46" width="414" height="370"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" secondItem="bXw-iu-AeH" secondAttribute="height" multiplier="10:7" id="ZRB-Da-Hda"/>
+                                                            <constraint firstAttribute="height" constant="370" id="SZ8-pn-Ix3"/>
                                                         </constraints>
                                                         <connections>
                                                             <segue destination="jjw-Tr-u4k" kind="embed" id="XrJ-0q-cNT"/>
                                                         </connections>
                                                     </containerView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bu7-Xx-FUT">
-                                                        <rect key="frame" x="0.0" y="335.5" width="414" height="69"/>
+                                                        <rect key="frame" x="0.0" y="416" width="414" height="41"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j6B-8b-eio" userLabel="실선">
-                                                                <rect key="frame" x="15" y="34" width="384" height="1"/>
+                                                                <rect key="frame" x="15" y="20" width="384" height="1"/>
                                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="myM-Be-gQq"/>
@@ -429,7 +429,7 @@
                                                         <constraints>
                                                             <constraint firstItem="j6B-8b-eio" firstAttribute="leading" secondItem="bu7-Xx-FUT" secondAttribute="leading" constant="15" id="45G-05-fHC"/>
                                                             <constraint firstAttribute="trailing" secondItem="j6B-8b-eio" secondAttribute="trailing" constant="15" id="5Az-1u-7HU"/>
-                                                            <constraint firstAttribute="width" secondItem="bu7-Xx-FUT" secondAttribute="height" multiplier="6:1" id="BDP-1T-JWh"/>
+                                                            <constraint firstAttribute="width" secondItem="bu7-Xx-FUT" secondAttribute="height" multiplier="10:1" id="BDP-1T-JWh"/>
                                                             <constraint firstItem="j6B-8b-eio" firstAttribute="centerY" secondItem="bu7-Xx-FUT" secondAttribute="centerY" id="Vw2-Yr-e3G"/>
                                                         </constraints>
                                                     </view>
@@ -657,49 +657,93 @@
             </objects>
             <point key="canvasLocation" x="96" y="297"/>
         </scene>
-        <!--View Controller-->
+        <!--Mega Pick Container View-->
         <scene sceneID="wd0-iO-eQ0">
             <objects>
-                <viewController id="Pe9-dP-ww1" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MegaPickContainerView" id="Pe9-dP-ww1" customClass="MegaPickContainerView" customModule="MegaboxClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lX3-P6-M6t">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="289.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="370"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="매가픽 뷰" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aD-Vh-cIE">
-                                <rect key="frame" x="175" y="99" width="64" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LN1-9Q-qhK">
+                                <rect key="frame" x="0.0" y="44" width="414" height="366"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DxT-52-HbY">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="5rS-Rr-2sU">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HRN-SN-huf">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Fhw-J3-Izh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LN1-9Q-qhK" firstAttribute="leading" secondItem="Fhw-J3-Izh" secondAttribute="leading" id="Mmu-SG-qym"/>
+                            <constraint firstItem="LN1-9Q-qhK" firstAttribute="top" secondItem="Fhw-J3-Izh" secondAttribute="top" id="NiG-tB-iik"/>
+                            <constraint firstItem="Fhw-J3-Izh" firstAttribute="bottom" secondItem="LN1-9Q-qhK" secondAttribute="bottom" constant="-40" id="TOV-Dn-asC"/>
+                            <constraint firstItem="Fhw-J3-Izh" firstAttribute="trailing" secondItem="LN1-9Q-qhK" secondAttribute="trailing" id="zNy-zl-qG3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="megaPickCollectionView" destination="LN1-9Q-qhK" id="E5P-ni-hUp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uTF-oJ-Pqy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="391" y="585"/>
+            <point key="canvasLocation" x="389.85507246376812" y="584.59821428571422"/>
         </scene>
-        <!--View Controller-->
+        <!--Movie Container View-->
         <scene sceneID="sdA-v0-ISc">
             <objects>
-                <viewController id="jjw-Tr-u4k" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MovieContainerView" id="jjw-Tr-u4k" customClass="MovieContainerView" customModule="MegaboxClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="auG-er-QbN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="289.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="370"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="무비 뷰" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzg-2b-elV">
-                                <rect key="frame" x="194" y="107" width="49" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1Y1-gN-6dJ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="366"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8xZ-67-sLW">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="chx-oF-HLf">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iac-ea-eXJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8Q6-1f-JSK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1Y1-gN-6dJ" firstAttribute="top" secondItem="8Q6-1f-JSK" secondAttribute="top" id="9ZT-5G-Jm1"/>
+                            <constraint firstItem="8Q6-1f-JSK" firstAttribute="bottom" secondItem="1Y1-gN-6dJ" secondAttribute="bottom" constant="-40" id="Ocv-vM-lxu"/>
+                            <constraint firstItem="8Q6-1f-JSK" firstAttribute="trailing" secondItem="1Y1-gN-6dJ" secondAttribute="trailing" id="kt4-Ms-QHk"/>
+                            <constraint firstItem="1Y1-gN-6dJ" firstAttribute="leading" secondItem="8Q6-1f-JSK" secondAttribute="leading" id="pwa-76-7Ur"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="movieCollectionView" destination="1Y1-gN-6dJ" id="vVg-Xn-Cxw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ybu-ma-deo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
